feat: add footer & header

--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -2,6 +2,11 @@
   --c-black: #000;
   --c-white: #fff;
 
+  --c-blue-600: #2563eb;
+
   --c-gray-50: #f9fafb;
   --c-gray-400: #9ca3af;
+  --c-gray-900: #111827;
+
+  --c-reds-500: #ef4444;
 }
