--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,5 +1,9 @@
-<header></header>
+<header>
+  <app-header></app-header>
+</header>
 <main class="wrap">
   <router-outlet></router-outlet>
 </main>
-<footer></footer>
+<footer>
+  <app-footer></app-footer>
+</footer>
