--- a/src/styles/base/_typo.scss
+++ b/src/styles/base/_typo.scss
@@ -4,7 +4,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
 }
 
 h1 {
@@ -28,6 +28,6 @@ h6 {
 p {
   font-weight: 300;
   line-height: 1.6;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   max-width: 40rem;
 }
