feat: add product-details page

--- a/src/app/modules/products/containers/product-details/product-details.component.html
+++ b/src/app/modules/products/containers/product-details/product-details.component.html
@@ -1,1 +1,23 @@
-<p>product-details works!</p>
+<ng-container *ngIf="productDetails$ | async as productDetails">
+  <section class="product-details-imgs"></section>
+
+  <section class="product-details-info">
+    <h1>{{ productDetails?.name }}</h1>
+    <p class="product-details-info__id">ID: {{ productDetails?.id }}</p>
+
+    <p class="product-details-info__price">$100.00 <span>/ $120.00</span></p>
+
+    <div class="pd__action"></div>
+  </section>
+
+  <section class="product-details-more">
+    <h2>Description</h2>
+    <p>{{ productDetails?.desc }}</p>
+
+    <h2>Details</h2>
+    <p>{{ productDetails?.desc }}</p>
+
+    <h2>Data</h2>
+    <p>{{ productDetails?.desc }}</p>
+  </section>
+</ng-container>
