feat: add svg-to-ts

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,5 +5,18 @@
         <a routerLink="/" class="logo">NgStorefront</a>
       </li>
     </ul>
+
+    <ul>
+      <li>
+        <a routerLink="/products">
+          <svg-icon key="list"></svg-icon>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/cart">
+          <svg-icon key="cart"></svg-icon>
+        </a>
+      </li>
+    </ul>
   </nav>
 </div>
