feat: add app store

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li>
-        <a routerLink="/" class="logo">NgStorefront</a>
+        <a routerLink="/" class="logo">{{ name$ | async }}</a>
       </li>
     </ul>
 
