--- a/src/app/modules/products/shared/components/product-card/product-card.component.html
+++ b/src/app/modules/products/shared/components/product-card/product-card.component.html
@@ -1,7 +1,7 @@
 <article class="product-card">
   <div class="product-card__hero"></div>
   <div class="product-card__info">
-    <a class="product-card__name" [routerLink]="[product.slug]">
+    <a class="product-card__name" [routerLink]="['/products', product.slug]">
       {{ product.name }}
     </a>
     <p class="product-card__id">ID: {{ product.id }}</p>
