feat: add cart service

--- a/src/app/modules/cart/containers/cart/cart.component.html
+++ b/src/app/modules/cart/containers/cart/cart.component.html
@@ -1,1 +1,8 @@
-<p>cart works!</p>
+<ng-container *ngIf="cart$ | async as cart">
+  <div class="cart__list">
+    <app-product-card
+      *ngFor="let product of cart.itemList"
+      [product]="product"
+    ></app-product-card>
+  </div>
+</ng-container>
