feat: add product-listing

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,6 +26,7 @@
       color: var(--c-reds-500);
       font-weight: bold;
       font-size: 1.5rem;
+      margin-left: 0;
     }
 
     span.header__quantity {
