--- a/src/app/modules/products/shared/components/product-card/product-card.component.html
+++ b/src/app/modules/products/shared/components/product-card/product-card.component.html
@@ -5,5 +5,6 @@
       {{ product.name }}
     </a>
     <p class="product-card__id">ID: {{ product.id }}</p>
+    <p *ngIf="product?.quantity">Quantity: {{ product.quantity }}</p>
   </div>
 </article>
